src-ken&y/objects/Supplier_Invoice_Line__c.object
<CustomObject>
    <customHelpPage>HelpSupplierInvoice</customHelpPage>
    <fields>
        <fullName>Accounting_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Accounting Segment.</description>
        <label>Accounting Segment</label>
        <referenceTo>Accounting_Default__c</referenceTo>
        <relationshipLabel>Supplier Invoice Lines</relationshipLabel>
        <relationshipName>Supplier_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Charged_Tax__c</fullName>
        <label>Charged Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Supplier_Invoice__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Details__c</fullName>
        <description>Holds exception error messages, if any. All error messages will get appended here as they are found. Will be reset for every instance of batch validations run</description>
        <label>Exception Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extended_Cost__c</fullName>
        <description>Extended Cost for the line</description>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <formula>ROUND(Invoice_Quantity__c * Unit_Price__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <formula>Supplier_Invoice__r.Finalized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Functional_Amount__c</fullName>
        <label>Functional Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <formula>Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <formula>Supplier_Invoice__r.Historical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup from credit memo line of type invoice to an invoice line.</description>
        <label>Invoice Line</label>
        <referenceTo>Supplier_Invoice_Line__c</referenceTo>
        <relationshipLabel>Supplier Invoice Lines</relationshipLabel>
        <relationshipName>Supplier_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Quantity_To_Stock__c</fullName>
        <label>Invoice Quantity To Stock</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Quantity__c</fullName>
        <label>Invoice Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Supplier Invoice Lines</relationshipLabel>
        <relationshipName>Supplier_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miscellaneous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Miscellaneous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set True if Invoice Unit Price is greater than PO Unit Price.</description>
        <label>Price Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to purchase order line</description>
        <label>Purchase Order Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Purchase_Order_Line__c.Purchase_Order__c</field>
                <operation>equals</operation>
                <value>Supplier Invoice Line: Purchase Order</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Supplier Invoice Lines</relationshipLabel>
        <relationshipName>Supplier_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Purchase Order</description>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Supplier Invoice Lines</relationshipLabel>
        <relationshipName>Supplier_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <formula>IF(NOT(ISNULL(Purchase_Order_Line__c)),
 ROUND(Invoice_Quantity__c * Purchase_Order_Line__r.Unit_Price__c,2),
 ROUND(Invoice_Quantity__c *  Unit_Price__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional for lines without POLine. For lines with POLine, this inherits its value from POLine.</description>
        <label>Purchase UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Supplier Invoice Line</relationshipLabel>
        <relationshipName>Supplier_Invoice_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchasing_UOM__c</fullName>
        <formula>Item__r.Purchasing_UOM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchasing UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set True if Invoice Quantity is greater than Quantity Received.</description>
        <label>Quantity Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity received</description>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Returned_to_Supplier__c</fullName>
        <description>Quantity returned to supplier</description>
        <label>Quantity Returned to Supplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Returned_to_Supplier_for_Credit__c</fullName>
        <description>Quantity returned to supplier for credit only.</description>
        <inlineHelpText>Quantity returned to supplier for credit only.</inlineHelpText>
        <label>Quantity Returned for Credit</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Amount__c</fullName>
        <label>Sales Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate__c</fullName>
        <label>Sales Tax Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Segment_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that there are missing segment record for this invoice line and that it is required  to enter segments</description>
        <label>Segment Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_From_City__c</fullName>
        <description>to populate ship from city.</description>
        <label>Ship From City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_From_Country__c</fullName>
        <description>to populated ship from country.</description>
        <label>Ship From Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_From_State__c</fullName>
        <description>to populate ship from state</description>
        <label>Ship From State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_From_Street__c</fullName>
        <description>to populate ship from street.</description>
        <label>Ship From Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_From_Zip_Code__c</fullName>
        <description>to populate ship from zip code</description>
        <label>Ship From Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <description>to populate ship to city.</description>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <description>to populate ship to country.</description>
        <label>Ship To Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <description>to populate ship to state.</description>
        <label>Ship To State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street__c</fullName>
        <description>to populate ship to street.</description>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip_Code__c</fullName>
        <description>to populate ship to zip code.</description>
        <label>Ship To Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtransaction_Type__c</fullName>
        <label>Subtransaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice__c</fullName>
        <label>Supplier Invoice</label>
        <referenceTo>Supplier_Invoice__c</referenceTo>
        <relationshipLabel>Supplier Invoice Line</relationshipLabel>
        <relationshipName>Supplier_Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tax_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Fixed_Asset_Adjustments__c</fullName>
        <inlineHelpText>Total Fixed Asset Adjustments</inlineHelpText>
        <label>Asset Adjustments</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_as_Asset__c</fullName>
        <label>Track as Asset</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <description>Transaction Currency of the Received Purchase Order Line</description>
        <formula>Purchase_Order_Line__r.Currency__c</formula>
        <label>Transaction Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Unit price on the purchase order line at the time of this receipt</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Rate__c</fullName>
        <label>VAT Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <label>Supplier Invoice Line</label>
    <nameField>
        <label>Supplier Invoice Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Invoice Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PO_Line_Type_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Line_Type__c ) ,
  ISPICKVAL( PRIORVALUE(Line_Type__c), &apos;PO&apos;))</errorConditionFormula>
        <errorMessage>PO matched lines should have a line type of PO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transaction_Currency_Lookup_match_to_SI</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Purchase_Order__c != null, (Purchase_Order__r.Currency__c ) != 
( Supplier_Invoice__r.Currency__c), false)</errorConditionFormula>
        <errorMessage>The supplier invoice currency must be the same as the purchase order currency.</errorMessage>
    </validationRules>
</CustomObject>